# grrshell

./: .gitignore  .pylintrc  README.md  codecov.yml  pyproject.toml  pytype.conf
.github/workflows/: codecov.yml  install.yml  pylint.yml  pypi-publish.yml  pytype.yml  unittests.yml
grrshell/cli/: main.py
grrshell/lib/: client_monitors.py  errors.py  flow_args_parsers.py  formatters.py  grr_shell_client.py  grr_shell_emulated_fs.py  grr_shell_repl.py  utils.py
grrshell/tests/: flow_args_parsers_test.py  grr_shell_client_test.py  grr_shell_emulated_fs_test.py  grr_shell_repl_test.py  main_test.py  utils_test.py
grrshell/tests/testdata/: mock_apiflow_artifactcollector_allfile_running.textproto  mock_apiflow_artifactcollector_allfile_terminated.textproto  mock_apiflow_artifactcollector_multiple.textproto  mock_apiflow_artifactcollector_running.textproto  mock_apiflow_artifactcollector_terminated.textproto  mock_apiflow_artifactcollector_windowsregkey_running.textproto  mock_apiflow_artifactcollector_wmilogicaldisks_running.textproto  mock_apiflow_clientfilefinder_download_error.textproto  mock_apiflow_clientfilefinder_download_running.textproto  mock_apiflow_clientfilefinder_download_terminated.textproto  mock_apiflow_clientfilefinder_hash_running.textproto  mock_apiflow_clientfilefinder_multiple.textproto  mock_apiflow_collectbrowserhistory.textproto  mock_apiflow_collectfilesbyknownpath_multiple.textproto  mock_apiflow_collectfilesbyknownpath_single.textproto  mock_apiflow_getfile_running.textproto  mock_apiflow_interrogate_running.textproto  (+39 more)
