[tool.poetry]
name = "grrshell"
version = "v20240405"
description = ""
authors = ["Ramo <ramoj@google.com>"]
readme = "README.md"

[tool.poetry.scripts]
grrshell = 'grrshell.cli.main:main'

[tool.poetry.dependencies]
python = "^3.9"
absl-py = "^1.4.0"
humanize = "^4.7.0"
grr-api-client = "^3.4.6.post7"
prompt-toolkit = "^3.0.39"

[tool.poetry.group.dev.dependencies]
pytype = "^2023.10.17"
pylint = "^3.0.2"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
